<resources>
    <string name="app_name">AndroidCamp</string>
    <string name="hi_fragment">Hi, This is TextView from Fragment with Dynamic way</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_book">My book</string>
    <string name="menu_book_love">Book love</string>
    <string name="menu_up_book">Upload book</string>
    <string name="menu_mess">Message</string>
    <string name="menu_login">Login</string>
    <string name="menu_register_account">Register Account</string>
    <string name="menu_logout">Log out</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_up_book">UpBookActivity</string>
</resources>
