<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:tint="@color/light_blue_500"
                android:title="@string/menu_home"/>

        <item
                android:id="@+id/nav_up_book"
                android:icon="@drawable/ic_create"
                android:tint="@color/light_blue_500"
                android:title="@string/menu_up_book"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_mess"
                    android:icon="@drawable/ic_notifications"
                    android:tint="@color/light_blue_500"
                    android:title="@string/menu_mess"/>
            <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_person_outline"
                    android:tint="@color/light_blue_500"
                    android:title="@string/menu_login"/>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_border_outer"
                    android:tint="@color/light_blue_500"
                    android:title="@string/menu_logout"/>
        </menu>
    </item>

</menu>
